Refactoring (#7)